# fresco

fresco-contrib/benb/idl/: fresco-meta.idl
fresco-contrib/benb/java/: make-idl-jacorb.sh  make-idl-sun.sh  make.sh
fresco-contrib/nicholasl/: WHAT-IS-THIS  fresco-config
fresco-contrib/nicholasl/blob/: WHAT-IS-THIS  blob.cc  blob.sh
fresco-contrib/nicholasl/clock/: clock.cc  clock.sh
fresco-contrib/nicholasl/debug/: DebugConsole.cc  DebugConsole.hh  DebugController.hh  WHAT-IS-THIS  bt  clientlog  debug.cc  debug.hh  debug.out  debug.sh  irc
fresco-contrib/nicholasl/gauge/: WHAT-IS-THIS  gauge.cc  gauge.sh
fresco-contrib/nicholasl/helloworld/: WHAT-IS-THIS  helloworld.cc  helloworld.sh
fresco-contrib/nicholasl/imagerotation/: WHAT-IS-THIS  imagerotation.cc  imagerotation.sh
fresco-contrib/nicholasl/minesweeper/: GameContext.cc  GameContext.hh  GameDisplayer.cc  GameDisplayer.hh  TerrainGenerator.cc  TerrainGenerator.hh  WHAT-IS-THIS  field.idl  minesweeper.cc  minesweeper.hh  minesweeper.sh
fresco-contrib/nicholasl/painters/: WHAT-IS-THIS  painters.cc  painters.sh
fresco-contrib/nicholasl/progress/: WHAT-IS-THIS  progress.cc  progress.sh
fresco-contrib/nicholasl/walker/: walker.cc  walker.sh
fresco-contrib/redmondp/cdplayer/: Makefile.am  configure.in
fresco-contrib/redmondp/skeleton/: README  configure.in
fresco-contrib/redmondp/skeleton/src/: Makefile.am  Skeleton.cc  Skeleton.hh  main.cc
fresco-contrib/redmondp/teapot/: configure.in
website/: cvspolicy.html  index.html
website/benb/: index.html
website/new/: index.html
(+33 files in other folders)
